--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header class="header u-margin-bottom-big">
         <div class="bg-video">
             <video class="bg-video__content" autoplay muted loop>
-                <source src="img/stangmovie.mp
+                <source src="img/stangmovie.mp4" type="stangmovie/mp4">
                 Your browser is not supported!
             </video>
         </div>
