--- a/index.html
+++ b/index.html
@@ -325,10 +325,10 @@
                             <h3>Paulius Rudaitis</h3>
                             <div class="team-links">
                                 <ul>
-                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -346,10 +346,10 @@
                             <h3>Paulius Rudaitis</h3>
                             <div class="team-links">
                                 <ul>
-                                    <li><a href="https://github.com/atuljustano"><i class="fab fa-github"></i></a></li>
-                                    <li><a href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
+                                    <li><a href=""><i class="fab fa-github"></i></a></li>
+                                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href=""><i class="fab fa-youtube"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -372,10 +372,10 @@
                 <div class="col-1-of-2">
                     <div class="footer__navigation" id="footer__navigation">
                         <ul class="footer__list">
-                            <li class="footer__item"><a class="footer__link" href="https://facebook.com/atuljustano"><i class="fab fa-facebook-square"></i></a></li>
-                            <li class="footer__item"><a class="footer__link" href="https://www.instagram.com/atulkprajapati2000/"><i class="fab fa-instagram"></i></a></li>
-                            <li class="footer__item"><a class="footer__link" href="https://twitter.com/atuljustano"><i class="fab fa-twitter"></i></a></li>
-                            <li class="footer__item"><a class="footer__link" href="https://www.youtube.com/channel/UCf-KfxuY8PZBSD_8RW2nYsw"><i class="fab fa-youtube"></i></a></li>
+                            <li class="footer__item"><a class="footer__link" href="#"><i class="fab fa-facebook-square"></i></a></li>
+                            <li class="footer__item"><a class="footer__link" href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li class="footer__item"><a class="footer__link" href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li class="footer__item"><a class="footer__link" href="#"><i class="fab fa-youtube"></i></a></li>
                         </ul>
                     </div>
                 </div>
