--- a/darzelis.html
+++ b/darzelis.html
@@ -13,6 +13,27 @@
         <title>Diemedis | Darželis</title>
     </head>
     <body>
+        <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+            <label for="navi-toggle" class="navigation__button">
+                <span class="navigation__icon">&nbsp;</span>
+            </label>
+
+            <div class="navigation__background">&nbsp;</div>
+
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="apie_mus.html" class="navigation__link">Apie mus</a></li>
+                    <li class="navigation__item"><a href="mokykla.html" class="navigation__link">Mokykla</a></li>
+                    <li class="navigation__item"><a href="darzelis.html" class="navigation__link">Darželis</a></li>
+                    <li class="navigation__item"><a href="nuotolinis.html" class="navigation__link">Nuotolinis mokymas</a></li>
+                    <li class="navigation__item"><a href="kontaktai.html" class="navigation__link">Kontaktai</a></li>
+                    <li class="navigation__item"><a href="index.html" class="navigation__link">Naujienos</a></li>
+                </ul>
+            </nav>
+        </div>
+        <!-- //nav test -->
         <div class="container">
             <header class="header">
                 <a href="index.html" class="logo">
@@ -23,51 +44,33 @@
                 <nav class="sidebar">
                     <ul class="side-nav">
                         <li class="side-nav__item">
-                            <a href="apie_mus.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-tree"></use>
-                                </svg>
-                                <span>Apie mus</span>
+                            <a href="#part8" class="side-nav__link">
+                                <span>UŽSIEMIMAI</span>
                             </a>
                         </li>
                         <li class="side-nav__item">
                             <div class="dropdown">
-                                <a href="mokykla.html" class="side-nav__link">
-                                    <svg class="side-nav__icon">
-                                        <use xlink:href="img/sprite.svg#icon-graduation-cap"></use>
-                                    </svg>
-                                    <span>Mokykla</span>
+                                <a href="#part9" class="side-nav__link">
+                                    <span>ŽAIDIMŲ GRUPĖ</span>
                                 </a>
                             </div>
                         </li>
-                        <li class="side-nav__item side-nav__item--active">
-                            <a href="darzelis.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-open-book"></use>
-                                </svg>
-                                <span>Darželis</span>
+                        <li class="side-nav__item">
+                            <a href="#part10" class="side-nav__link">
+                                <span>BENDRA INFORMACIJA</span>
                             </a>
                         </li>
                         <li class="side-nav__item">
-                            <a href="nuotolinis.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-laptop"></use>
-                                </svg>
-                                <span>Nuotolinis mokymas</span>
+                            <a href="#part11" class="side-nav__link">
+                                <span>Taisyklės</span>
                             </a>
                         </li>
                         <li class="side-nav__item">
-                            <a href="kontaktai.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-old-phone"></use>
-                                </svg>
-                                <span>Kontaktai</span>
+                            <a href="#part12" class="side-nav__link">
+                                <span>Kainoraštis</span>
                             </a>
                         </li>
                     </ul>
-                    <div class="legal">
-                        &copy; 2020 by Diemedis.
-                    </div>
                 </nav>
                 <main class="school-view">
                     <div class="gallery">
@@ -94,11 +97,11 @@
                                 <p class="text__content-paragraph">
                                     Nuo 2019 m. vasaros „Diemedyje“ veiks 5 darželio grupės: 2, 3, 4, 5 metų amžiaus vaikų grupės bei priešmokyklinio ugdymo grupė. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis ex animi eaque! Quas quidem dignissimos consectetur ex beatae quod unde, totam magnam debitis sed nisi eum vel ad libero deleniti.
                                 </p>
-                                <div class="secondary-navigation">
+                                <!-- <div class="secondary-navigation">
                                     <a href="#part8" class="secondary-navigation-button">UŽSIEMIMAI &rarr;</a>
                                     <a href="#part9" class="secondary-navigation-button">ŽAIDIMŲ GRUPĖ &rarr;</a>
                                     <a href="#part10" class="secondary-navigation-button">BENDRA INFORMACIJA &rarr;</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -174,10 +177,10 @@
                                     2 kartus per metus (sausio ir birželio mėn.) tėvai kviečiami į individualius susitikimus su mokytojais aptarti vaikų ugdymosi pasiekimų.
                                 </p>
                             </div>
-                            <div class="secondary-navigation">
+                            <!-- <div class="secondary-navigation">
                                 <a href="#part11" class="secondary-navigation-button">Taisyklės &rarr;</a>
                                 <a href="#part12" class="secondary-navigation-button">Kainoraštis &rarr;</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="overview">
