--- a/mokykla.html
+++ b/mokykla.html
@@ -13,6 +13,27 @@
         <title>Diemedis | Mokykla</title>
     </head>
     <body>
+        <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+            <label for="navi-toggle" class="navigation__button">
+                <span class="navigation__icon">&nbsp;</span>
+            </label>
+
+            <div class="navigation__background">&nbsp;</div>
+
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="apie_mus.html" class="navigation__link">Apie mus</a></li>
+                    <li class="navigation__item"><a href="mokykla.html" class="navigation__link">Mokykla</a></li>
+                    <li class="navigation__item"><a href="darzelis.html" class="navigation__link">Darželis</a></li>
+                    <li class="navigation__item"><a href="nuotolinis.html" class="navigation__link">Nuotolinis mokymas</a></li>
+                    <li class="navigation__item"><a href="kontaktai.html" class="navigation__link">Kontaktai</a></li>
+                    <li class="navigation__item"><a href="index.html" class="navigation__link">Naujienos</a></li>
+                </ul>
+            </nav>
+        </div>
+        <!-- //nav test -->
         <div class="container">
             <header class="header">
                 <a href="index.html" class="logo">
@@ -23,51 +44,28 @@
                 <nav class="sidebar">
                     <ul class="side-nav">
                         <li class="side-nav__item">
-                            <a href="apie_mus.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-tree"></use>
-                                </svg>
-                                <span>Apie mus</span>
+                            <a href="#part4" class="side-nav__link">
+                                <span>VERTYBĖS IR PRINCIPAI</span>
                             </a>
                         </li>
-                        <li class="side-nav__item side-nav__item--active">
+                        <li class="side-nav__item">
                             <div class="dropdown">
-                                <a href="mokykla.html" class="side-nav__link">
-                                    <svg class="side-nav__icon">
-                                        <use xlink:href="img/sprite.svg#icon-graduation-cap"></use>
-                                    </svg>
-                                    <span>Mokykla</span>
+                                <a href="#part5" class="side-nav__link">
+                                    <span>MOKYMOSI APLINKA</span>
                                 </a>
                             </div>
                         </li>
                         <li class="side-nav__item">
-                            <a href="darzelis.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-open-book"></use>
-                                </svg>
-                                <span>Darželis</span>
+                            <a href="#part6" class="side-nav__link">
+                                <span>MOKINIO DIENA</span>
                             </a>
                         </li>
                         <li class="side-nav__item">
-                            <a href="nuotolinis.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-laptop"></use>
-                                </svg>
-                                <span>Nuotolinis mokymas</span>
-                            </a>
-                        </li>
-                        <li class="side-nav__item">
-                            <a href="kontaktai.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-old-phone"></use>
-                                </svg>
-                                <span>Kontaktai</span>
+                            <a href="#part7" class="side-nav__link">
+                                <span>BENDRA INFORMACIJA</span>
                             </a>
                         </li>
                     </ul>
-                    <div class="legal">
-                        &copy; 2020 by Diemedis.
-                    </div>
                 </nav>
                 <main class="school-view">
                     <div class="gallery">
@@ -94,12 +92,12 @@
                                 <p class="text__content-paragraph">
                                     veikia jau aštuonerius metus. 2019 metų rudenį naujose patalpose pradės mokytis penktokai, kurie mūsų mokykloje galės pabaigti 8 klases. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta reiciendis accusantium repudiandae laborum beatae in eligendi culpa tenetur quibusdam molestiae cum molestias consectetur, nostrum suscipit nobis. Eos labore quaerat facere.
                                 </p>
-                                <div class="secondary-navigation">
+                                <!-- <div class="secondary-navigation">
                                     <a href="#part4" class="secondary-navigation-button">VERTYBĖS IR PRINCIPAI &rarr;</a>
                                     <a href="#part5" class="secondary-navigation-button">MOKYMOSI APLINKA &rarr;</a>
                                     <a href="#part6" class="secondary-navigation-button">MOKINIO DIENA &rarr;</a>
                                     <a href="#part7" class="secondary-navigation-button">BENDRA INFORMACIJA &rarr;</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
