--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
         <!--  logo tab -->
         <link rel="shortcut icon" type="image/png" href="img/Logotipai/logo_mazas.jpg"> 
 
-        <title>Diemedis | Pagrindinis</title>
+        <title>Diemedis | Naujienos</title>
     </head>
     <body>
+        <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+            <label for="navi-toggle" class="navigation__button">
+                <span class="navigation__icon">&nbsp;</span>
+            </label>
+
+            <div class="navigation__background">&nbsp;</div>
+
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="apie_mus.html" class="navigation__link">Apie mus</a></li>
+                    <li class="navigation__item"><a href="mokykla.html" class="navigation__link">Mokykla</a></li>
+                    <li class="navigation__item"><a href="darzelis.html" class="navigation__link">Darželis</a></li>
+                    <li class="navigation__item"><a href="nuotolinis.html" class="navigation__link">Nuotolinis mokymas</a></li>
+                    <li class="navigation__item"><a href="kontaktai.html" class="navigation__link">Kontaktai</a></li>
+                    <li class="navigation__item"><a href="index.html" class="navigation__link">Naujienos</a></li>
+                </ul>
+            </nav>
+        </div>
+        <!-- //nav test -->
         <div class="container">
             <header class="header">
                 <a href="index.html" class="logo">
@@ -20,55 +41,6 @@
                 </a>
             </header>
             <div class="content">
-                <nav class="sidebar">
-                    <ul class="side-nav">
-                        <li class="side-nav__item">
-                            <a href="apie_mus.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-tree"></use>
-                                </svg>
-                                <span>Apie mus</span>
-                            </a>
-                        </li>
-                        <li class="side-nav__item">
-                            <div class="dropdown">
-                                <a href="mokykla.html" class="side-nav__link">
-                                    <svg class="side-nav__icon">
-                                        <use xlink:href="img/sprite.svg#icon-graduation-cap"></use>
-                                    </svg>
-                                    <span>Mokykla</span>
-                                </a>
-                            </div>
-                        </li>
-                        <li class="side-nav__item">
-                            <a href="darzelis.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-open-book"></use>
-                                </svg>
-                                <span>Darželis</span>
-                            </a>
-                        </li>
-                        <li class="side-nav__item">
-                            <a href="nuotolinis.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-laptop"></use>
-                                </svg>
-                                <span>Nuotolinis mokymas</span>
-                            </a>
-                        </li>
-                        <li class="side-nav__item">
-                            <a href="kontaktai.html" class="side-nav__link">
-                                <svg class="side-nav__icon">
-                                    <use xlink:href="img/sprite.svg#icon-old-phone"></use>
-                                </svg>
-                                <span>Kontaktai</span>
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="legal">
-                        &copy; 2020 by Diemedis.
-                    </div>
-                </nav>
                 <main class="school-view">
                     <div class="gallery">
                         <figure class="gallery__item">
@@ -83,7 +55,7 @@
                     </div>
 
                     <div class="overview">
-                        <h1 class="overview__heading">Pagrindinis/Naujienos</h1>
+                        <h1 class="overview__heading">Naujienos</h1>
                     </div>
 
                     <div class="news-container">
